- GlobalExceptionHandler to catch any exception and log it - Bug fix with having wrong last saved location and not being able to select a new location - Set last saved location to user.home if it does not exist